--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap'); */
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #222222;
+    color: white;
+}
+
+h1 {
+  font-weight: 700;
 }
 
 a {
